=================
Changes for Crate
=================

Unreleased
==========

 - Fixed an issue that could cause concurrent queries on sys tables to
   return inconsistent results if the table contains unassigned shards

 - Fixed an issue that could cause a `SELECT` statement to cause a missleading
   error if the table was deleted concurrently.

 - Fixed an issue that could cause a `SELECT` statement on partitioned tables
   to cause an error if all partitions were deleted concurrently.

 - Fixed a race condition that could cause a `REFRESH TABLE` statement to fail
   on partitioned tables

 - Fixed a bug which prevented a retry, or caused a retry to fail if a shard
   was closed because of relocation

 - Added column policy as column to ``information_schema.tables`` table

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` statements to
   get stuck

 - Fix: column policy property was missing in SHOW CREATE TABLE result

 - Fixed a race condition that could cause queries with a high limit to fail
   due to a missing job context.

 - Updated crate-admin to 0.14.2 which includes the following changes:

    - added support for line breaks in console result table

 - Added SHOW CREATE TABLE statement to dump the schema of a user created table

 - Updated crash to 0.13.1 which contains following changes:

    - added multiline support for tabular output format

 - Fixed an issue which could cause an error if a ``group by`` query was killed

 - Fixed an issue that caused COPY TO `s3` statements to get stuck

 - Fixed an issue which results in _id queries not matching on
   partitioned and clustered tables without primary key columns.

 - Updated crate-admin to 0.14.1 which includes following changes:

    - fix: number of underreplicated shards were fetched and displayed incorrectly

 - Expose missing refresh_interval table setting in information_schema.tables.

 - Added support for multiple tables in refresh statement.
